--- a/calendario-arquitectura.html
+++ b/calendario-arquitectura.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Cancelación de matrícula</title>
+    <title>tpl: Single</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -788,49 +788,239 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                Cancelación de <b>matrícula</b>
-              </h1><br>
+                Calendario <b>Facultad de Arquitectura</b>
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Esta gestión la debe realizar el alumno que deje de estudiar en esta Escuela Superior para no incurrir en mora, de esta manera estará solvente de pagos y podrá inscribirse sin problemas financieros al momento de volver a la formación académica.
-              </p>
-              <p>Debe estar solvente de pagos al realizar la cancelación de matrícula y debe realizar este proceso en las siguientes fechas:</p>
+              <table class="table">
+  <tbody>
+  </tbody><thead>
+    <tr style="padding-bottom: 20px;">
+      <th>FEBRERO 2023</th>
+      <th th="" style="width:200px;">FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inicio de clases 600‐665‐605D‐680‐610‐625‐630‐645‐612‐678</td>
+    <td style="text-align: center;">FEB 01</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio de clases 605F‐616‐621‐636‐641‐671‐676‐678F</td>
+    <td style="text-align: center;">FEB 03</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Último día de inscripción y Asignación Ordinaria ‐ No hay Extraordinaria</td>
+    <td style="text-align: center;">FEB 18-18</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inducción alumnos/padres Primer Ingreso (V)</td>
+    <td style="text-align: center;">FEB 22</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Lección Inaugural 2022</td>
+    <td style="text-align: center;">FEB 24</td>
+  </tr>
+  </tbody><thead>
+  </thead><thead>
+    <tr style="padding-bottom: 20px;">
+      <th>MARZO 2023</th>
+      <th th="" style="width:200px;">FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Evaluación Primer Parcial ‐ No hay Extraordinarios</td>
+    <td style="text-align: center;">MAR 06-11</td>
+  </tr>
 
-              <h2>Estudiantes de Pregrado (Licenciaturas)</h2>
-              <p>
-              En el primer semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de mayo, a partir del 01 de junio ya no puede realizar dicho trámite.
-            </p>
-              <p>
-                En el segundo semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de octubre, a partir del 01 de noviembre ya no puede realizar dicho trámite.
-              </p>
+  </tbody><thead>
+  <tr>
+    <th>ABRIL 2023</th>
+    <th>FECHA</th>
+  </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Feriado Semana Santa</td>
+    <td style="text-align: center;">ABR 03-08</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Semana del Programa Permanente Académico Cultural (sin suspención de clases)</td>
+    <td style="text-align: center;">ABR 10-15</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación Segundo Parcial ‐ No hay Extraordinarios</td>
+    <td style="text-align: center;">ABR 24-29</td>
+  </tr>
+  </tbody><thead>
+  <tr>
+    <th>MAYO 2023</th>
+    <th>FECHA</th>
+  </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Feriado Día del Trabajo</td>
+    <td style="text-align: center;">MAY 01</td>
+  </tr>
+</tbody><thead>
+  <tr>
+    <th>JUNIO 2023</th>
+    <th>FECHA</th>
+  </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Último día de clases 600‐665‐605D‐680‐610‐625‐630‐645‐612‐678</td>
+    <td style="text-align: center;">JUN 09</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Último día de clases 605F‐616‐621‐636‐641‐671‐676‐678F</td>
+    <td style="text-align: center;">JUN 10</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación Final</td>
+    <td style="text-align: center;">JUN 12-17</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Exámenes de Recuperación</td>
+    <td style="text-align: center;">JUN 19-24</td>
+  </tr>
+  <!-- <tr>
+    <td style="text-align: left;">Inscripción y Asignación Ordinaria (No hay extraordinaria) del 19 de junio al 22 de
+julio.</td>
+    <td style="text-align: center;">JUN 19-24</td>
+  </tr> -->
 
-              <h2>Estudiantes de Posgrados</h2>
-              <p>
-                En cualquier fecha del trimestre vigente, el estudiante puede cancelar matrícula tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite.
-              </p>
-              <h3>Proceso</h3>
-              <p>
-              Deberá de enviar un correo a tesoreria@umg.edu.gt dirigido al Departamento de Tesorería detallando: nombre completo y número de carnet, solicitando la cancelación de matrícula, este proceso no tiene ningún costo el único requisito que se solicita es que el estudiante se encuentre totalmente solvente en sus pagos, tomando en cuenta la fecha a partir de la cual está haciendo su solicitud.
-            </p>
-            <p>
-              <b>Más Información</b>
-              <br>
-              Departamento de Tesorería
-              <br>
-              Edificio “A”, 2do. Nivel, Oficina A-230
-              <br>
-              PBX: 2411-1800 Ext. 1206
-            </p>
-            <p>
-              <b>Horario de atención:</b>
-              <br>
-              Lunes a viernes de 7:00 a 20:30
-              <br>
-              Sábados de 7:00 a 12:00
-            </p>
+  <tr>
+    <td style="text-align: left;">Inscripción y Asignación Ordinaria (No hay extraordinaria) del 19 de junio al 22 de
+julio.</td>
+    <td style="text-align: center;">JUN 19-30</td>
+  </tr>
+  
+  <tr>
+    <td style="text-align: left;">Programa Permanente de Capacitación y Actualización Docente (V)</td>
+    <td style="text-align: center;">JUN 26-30</td>
+  </tr>
+</tbody><thead>
+  <tr>
+    <th>JULIO 2023</th>
+    <th>FECHA</th>
+  </tr>
+  </thead>
+  <!-- <tr>
+    <td style="text-align: left;">Inscripción y Asignación Ordinaria (No hay extraordinaria)</td>
+    <td style="text-align: center;">JUL 03-08</td>
+  </tr> -->
+  <tbody><tr>
+    <td style="text-align: left;">Inscripción y Asignación Ordinaria (No hay extraordinaria)</td>
+    <td style="text-align: center;">JUL 01-22</td>
+  </tr>
+
+  <tr>
+    <td style="text-align: left;">Feriado por Día del Ejercito</td>
+    <td style="text-align: center;">JUL 03</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio de clases 600‐665‐605D‐680‐610‐625‐630‐645‐612‐678</td>
+    <td style="text-align: center;">JUL 04</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio de clases 605F‐616‐621‐636‐641‐671‐676‐678F</td>
+    <td style="text-align: center;">JUL 07</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Último día de inscripción y Asignación Ordinaria ‐ No hay Extraordinaria</td>
+    <td style="text-align: center;">JUL 22</td>
+  </tr>
+
+</tbody><thead>
+  <tr>
+    <th>AGOSTO 2023</th>
+    <th>FECHA</th>
+  </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Evaluación Primer Parcial ‐ No hay Extraordinarios</td>
+    <td style="text-align: center;">AGO 07-12</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">15 de Agosto Feriado Día de la Asunción (sólo Campus Central)</td>
+    <td style="text-align: center;">AGO 14-19</td>
+  </tr>
+
+</tbody><thead>
+  <tr>
+    <th>SEPTIEMBRE 2023</th>
+    <th>FECHA</th>
+  </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Feriado por Día de la Independencia</td>
+    <td style="text-align: center;">SEP 15</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación Segundo Parcial ‐ No hay Extraordinarios</td>
+    <td style="text-align: center;">SEP 25-30</td>
+  </tr>
+
+</tbody><thead>
+  <tr>
+    <th>OCTUBRE 2023</th>
+    <th>FECHA</th>
+  </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Semana del Programa Permanente Académico Cultural (sin suspención de clases)
+(V) (Vitruvio, Palladio, Serlio, Trending Design, Makers)</td>
+    <td style="text-align: center;">OCT 09-14</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Feriado Día de la Revolución</td>
+    <td style="text-align: center;">OCT 20</td>
+  </tr>
+
+</tbody><thead>
+  <tr>
+    <th>NOVIEMBRE 2023</th>
+    <th>FECHA</th>
+  </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Feriado Día de Todos los Santos</td>
+    <td style="text-align: center;">NOV 01</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicia Inscripción y Asignación Ordinaria 2024 (No hay extraordinaria)</td>
+    <td style="text-align: center;">NOV 02</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Último día de clases 600‐665‐605D‐680‐610‐625‐630‐645‐612‐678</td>
+    <td style="text-align: center;">NOV 10</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Último día de clases 605F‐616‐621‐636‐641‐671‐676‐678F</td>
+    <td style="text-align: center;">NOV 11</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación Final</td>
+    <td style="text-align: center;">NOV 13-18</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Exámenes de Recuperación</td>
+    <td style="text-align: center;">NOV 20-25</td>
+  </tr>
+
+</tbody><thead>
+  <tr>
+    <th>DICIEMBRE 2023</th>
+    <th>FECHA</th>
+  </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Última semana actividades administrativas</td>
+    <td style="text-align: center;">DIC 04-09</td>
+  </tr>
+  </tbody>
+</table>
         </div>
       </article>
 
