--- a/calendario-ciencias-medicas.html
+++ b/calendario-ciencias-medicas.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Cancelación de matrícula</title>
+    <title>tpl: Single</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -788,49 +788,233 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                Cancelación de <b>matrícula</b>
-              </h1><br>
+                Calendario <b>Facultad de Ciencias Médicas y de la Salud</b>
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Esta gestión la debe realizar el alumno que deje de estudiar en esta Escuela Superior para no incurrir en mora, de esta manera estará solvente de pagos y podrá inscribirse sin problemas financieros al momento de volver a la formación académica.
-              </p>
-              <p>Debe estar solvente de pagos al realizar la cancelación de matrícula y debe realizar este proceso en las siguientes fechas:</p>
-
-              <h2>Estudiantes de Pregrado (Licenciaturas)</h2>
-              <p>
-              En el primer semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de mayo, a partir del 01 de junio ya no puede realizar dicho trámite.
-            </p>
-              <p>
-                En el segundo semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de octubre, a partir del 01 de noviembre ya no puede realizar dicho trámite.
-              </p>
-
-              <h2>Estudiantes de Posgrados</h2>
-              <p>
-                En cualquier fecha del trimestre vigente, el estudiante puede cancelar matrícula tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite.
-              </p>
-              <h3>Proceso</h3>
-              <p>
-              Deberá de enviar un correo a tesoreria@umg.edu.gt dirigido al Departamento de Tesorería detallando: nombre completo y número de carnet, solicitando la cancelación de matrícula, este proceso no tiene ningún costo el único requisito que se solicita es que el estudiante se encuentre totalmente solvente en sus pagos, tomando en cuenta la fecha a partir de la cual está haciendo su solicitud.
-            </p>
-            <p>
-              <b>Más Información</b>
-              <br>
-              Departamento de Tesorería
-              <br>
-              Edificio “A”, 2do. Nivel, Oficina A-230
-              <br>
-              PBX: 2411-1800 Ext. 1206
-            </p>
-            <p>
-              <b>Horario de atención:</b>
-              <br>
-              Lunes a viernes de 7:00 a 20:30
-              <br>
-              Sábados de 7:00 a 12:00
-            </p>
+              <p>Nutrición, Fisioterapia, Veterinaria, Enfermería</p>
+              <table class="table">
+  <tbody>
+  </tbody><thead>
+    <tr style="padding-bottom: 20px;">
+      <th>ENERO 2023</th>
+      <th style="width:200px;">FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inscripción y asignación ordinaria</td>
+    <td style="text-align: center;">ENE 02-15</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inscripción y Asignación Extraordinaria</td>
+    <td style="text-align: center;">ENE 16-31</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio de Clases General</td>
+    <td style="text-align: center;">ENE 09</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>FEBRERO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inscripción y asignación extemporánea</td>
+    <td style="text-align: center;">FEB 01-13</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Lección Inaugural</td>
+    <td style="text-align: center;">FEB 17</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Primer examen parcial</td>
+    <td style="text-align: center;">FEB 20-25</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>MARZO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Feria Deportiva</td>
+    <td style="text-align: center;">MAR 31</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>ABRIL 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Semana Mayor (asueto)</td>
+    <td style="text-align: center;">ABR 03-09</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Segundo examen parcial</td>
+    <td style="text-align: center;">ABR 17-22</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>MAYO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Día del Trabajo (Asueto)</td>
+    <td style="text-align: center;">MAY 01</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Última semana de clases</td>
+    <td style="text-align: center;">MAY 29-31</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>JUNIO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Última semana de clases</td>
+    <td style="text-align: center;">JUN 01-03</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Exámenes Finales</td>
+    <td style="text-align: center;">JUN 05-10</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Exámenes de Recuperación</td>
+    <td style="text-align: center;">JUN 14-17</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inscripción y Asignación Ordinaria</td>
+    <td style="text-align: center;">JUN 19-30</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Día del Ejército</td>
+    <td style="text-align: center;">JUN 30</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>JULIO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inicio de Clases</td>
+    <td style="text-align: center;">JUL 03</td>
+  </tr>
+  <!-- <tr>
+    <td style="text-align: left;">Inscripción y Asignación Ordinaria</td>
+    <td style="text-align: center;">JUL 03-16</td>
+  </tr>-->
+   <tr>
+    <td style="text-align: left;">Inscripción y Asignación Ordinaria</td>
+    <td style="text-align: center;">JUL 01-20</td>
+  </tr>
+  <!-- <tr>
+    <td style="text-align: left;">Inscripción y Asignación Extraordinaria</td>
+    <td style="text-align: center;">JUL 17-31</td>
+  </tr>-->
+  <tr>
+    <td style="text-align: left;">Inscripción y Asignación Extraordinaria</td>
+    <td style="text-align: center;">JUL 21-31</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>AGOSTO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inscripción y asignación extemporánea</td>
+    <td style="text-align: center;">AGO 01-06</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Primer Examen Parcial</td>
+    <td style="text-align: center;">AGO 07-12</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Día de la Asunción (Feriado en Campus Central)</td>
+    <td style="text-align: center;">AGO 15</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>SEPTIEMBRE 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Día de la Independencia (Asueto)</td>
+    <td style="text-align: center;">SEP 15</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Segundo Examen Parcial</td>
+    <td style="text-align: center;">SEP 18-23</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>OCTUBRE 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Feria Científica</td>
+    <td style="text-align: center;">OCT 06</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Día de la Revolución (Asueto)</td>
+    <td style="text-align: center;">OCT 20</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Última semana de clases</td>
+    <td style="text-align: center;">OCT 30-31</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>NOVIEMBRE 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Día de Todos los Santos (Asueto)</td>
+    <td style="text-align: center;">NOV 01</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Último semana de Clases</td>
+    <td style="text-align: center;">NOV 02-04</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Exámenes Finales</td>
+    <td style="text-align: center;">NOV 06-11</td>
+  </tr> 
+  <tr>
+    <td style="text-align: left;">Evaluaciones de Recuperación</td>
+    <td style="text-align: center;">NOV 15-18</td>
+  </tr> 
+  <tr>
+    <td style="text-align: left;">Curso Propedéutico</td>
+    <td style="text-align: center;">NOV 02-30</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inscripción y asignación ordinaria 2024</td>
+    <td style="text-align: center;">NOV 20</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>DICIEMBRE 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inscripción y asignación ordinaria 2023 <strong>2024</strong></td>
+    <td style="text-align: center;">DIC 01-08</td>
+  </tr>
+  </tbody>
+</table>
         </div>
       </article>
 
