--- a/calendario-gestion-publica.html
+++ b/calendario-gestion-publica.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Cancelación de matrícula</title>
+    <title>tpl: Single</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -788,49 +788,119 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                Cancelación de <b>matrícula</b>
-              </h1><br>
+                Calendario <b>Escuela de Gestión Pública</b>
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Esta gestión la debe realizar el alumno que deje de estudiar en esta Escuela Superior para no incurrir en mora, de esta manera estará solvente de pagos y podrá inscribirse sin problemas financieros al momento de volver a la formación académica.
-              </p>
-              <p>Debe estar solvente de pagos al realizar la cancelación de matrícula y debe realizar este proceso en las siguientes fechas:</p>
-
-              <h2>Estudiantes de Pregrado (Licenciaturas)</h2>
-              <p>
-              En el primer semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de mayo, a partir del 01 de junio ya no puede realizar dicho trámite.
-            </p>
-              <p>
-                En el segundo semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de octubre, a partir del 01 de noviembre ya no puede realizar dicho trámite.
-              </p>
-
-              <h2>Estudiantes de Posgrados</h2>
-              <p>
-                En cualquier fecha del trimestre vigente, el estudiante puede cancelar matrícula tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite.
-              </p>
-              <h3>Proceso</h3>
-              <p>
-              Deberá de enviar un correo a tesoreria@umg.edu.gt dirigido al Departamento de Tesorería detallando: nombre completo y número de carnet, solicitando la cancelación de matrícula, este proceso no tiene ningún costo el único requisito que se solicita es que el estudiante se encuentre totalmente solvente en sus pagos, tomando en cuenta la fecha a partir de la cual está haciendo su solicitud.
-            </p>
-            <p>
-              <b>Más Información</b>
-              <br>
-              Departamento de Tesorería
-              <br>
-              Edificio “A”, 2do. Nivel, Oficina A-230
-              <br>
-              PBX: 2411-1800 Ext. 1206
-            </p>
-            <p>
-              <b>Horario de atención:</b>
-              <br>
-              Lunes a viernes de 7:00 a 20:30
-              <br>
-              Sábados de 7:00 a 12:00
-            </p>
+              <table>
+  <tbody>
+  </tbody><thead>
+    <tr>
+      <th>ENERO 2021</th>
+      <th>FECHA</th>
+    </tr> 
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inscripciones Ordinarias</td>
+    <td style="text-align: center;">ENE 02-30</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>FEBRERO 2021</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inscripciones Ordinarias</td>
+    <td style="text-align: center;">FEB 01-15</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio de Clases</td>
+    <td style="text-align: center;">FEB 08</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inscripciones Extraordinarias</td>
+    <td style="text-align: center;">FEB 15-30</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>MARZO 2021</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Primer Parcial</td>
+    <td style="text-align: center;">MAR 22-27</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>MAYO 2021</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Segundo Parcial</td>
+    <td style="text-align: center;">MAY 10-15</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>JUNIO 2021</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Exámenes Finales</td>
+    <td style="text-align: center;">JUN 14-19<br>
+    JUN 04</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>JULIO 2021</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inscripciones Ordinarias</td>
+    <td style="text-align: center;">JUL 01-30</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio de Clases</td>
+    <td style="text-align: center;">JUL 05</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>AGOSTO 2021</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Primer Parcial</td>
+    <td style="text-align: center;">AGO 16-22</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>OCTUBRE 2021</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Segundo Parcial</td>
+    <td style="text-align: center;">OCT 04-09</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>NOVIEMBRE 2021</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Exámenes Finales</td>
+    <td style="text-align: center;">NOV 15-20</td>
+  </tr>
+  </tbody>
+</table>
         </div>
       </article>
 
