--- a/calendario-odontologia.html
+++ b/calendario-odontologia.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Cancelación de matrícula</title>
+    <title>tpl: Single</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -788,49 +788,274 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                Cancelación de <b>matrícula</b>
-              </h1><br>
+                Calendario <b>Facultad de Odontología</b>
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Esta gestión la debe realizar el alumno que deje de estudiar en esta Escuela Superior para no incurrir en mora, de esta manera estará solvente de pagos y podrá inscribirse sin problemas financieros al momento de volver a la formación académica.
-              </p>
-              <p>Debe estar solvente de pagos al realizar la cancelación de matrícula y debe realizar este proceso en las siguientes fechas:</p>
+              <table class="table">
+  <tbody>
+  </tbody><thead>
+    <tr style="padding-bottom: 20px;">
+      <th>ENERO 2023</th>
+      <th style="width:200px;">FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inscripción y asignación ordinaria</td>
+    <td style="text-align: center;">ENE 02-07</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inscripción y asignación extraordinaria</td>
+    <td style="text-align: center;">ENE 09-11</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inscripción y asignación extemporánea</td>
+    <td style="text-align: center;">ENE 12-14</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inducción académica estudiantes de primer ingreso 2023</td>
+    <td style="text-align: center;">ENE 12</td>
+  </tr>
+    <tr>
+    <td style="text-align: left;">Inducción clínica estudiantes de 3º a 5º.</td>
+    <td style="text-align: center;">ENE 09-10</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Actividad clínica estudiantes de 3º.</td>
+    <td style="text-align: center;">ENE 12-13</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio de semestre todos los grados.</td>
+    <td style="text-align: center;">ENE 16</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio de clínica (revisión instrumental)</td>
+    <td style="text-align: center;">ENE 16</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">INICIO MÓDULO I</td>
+    <td style="text-align: center;">16 al 20</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>FEBRERO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Día de Santa Apolonia</td>
+    <td style="text-align: center;">FEB 09</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Finalizar Módulo I</td>
+    <td style="text-align: center;">20 al 24</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación Parcial 1 todos los grados</td>
+    <td style="text-align: center;">27 de FEB - 03 MAR</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Congreso (3º. a 5º. Y clínica libre)</td>
+    <td style="text-align: center;">FEB 23-26</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>MARZO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inicio Módulo II</td>
+    <td style="text-align: center;">MAR 06-10</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>ABRIL 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Asueto Semana Santa</td>
+    <td style="text-align: center;">ABR 03-07</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Finaliza Módulo II</td>
+    <td style="text-align: center;">ABR 17-21</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación Parcial 2 todos los grados</td>
+    <td style="text-align: center;">ABR 24-28</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>Mayo 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Asueto Día del Trabajo</td>
+    <td style="text-align: center;">MAY 01</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio Módulo III</td>
+    <td style="text-align: center;">MAY 01-05</td>
+  </tr>
+  </tbody><thead>
+    <tr>
+      <th>Junio 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Finaliza Módulo III</td>
+    <td style="text-align: center;">JUN 05-09</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación final todos los grados</td>
+    <td style="text-align: center;">JUN 12-16</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inscripción y asignación ordinaria</td>
+    <td style="text-align: center;">JUN 19 - JUL 01</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Calificación y entrega de notas finales</td>
+    <td style="text-align: center;">JUN 19-23</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación de recuperación todos los grados</td>
+    <td style="text-align: center;">JUN 26-29</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Asueto Día Del Ejércio</td>
+    <td style="text-align: center;">JUN 30</td>
+  </tr>
 
-              <h2>Estudiantes de Pregrado (Licenciaturas)</h2>
-              <p>
-              En el primer semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de mayo, a partir del 01 de junio ya no puede realizar dicho trámite.
-            </p>
-              <p>
-                En el segundo semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de octubre, a partir del 01 de noviembre ya no puede realizar dicho trámite.
-              </p>
+  </tbody><thead>
+    <tr>
+      <th>JULIO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Inscripción y asignación extraordinaria</td>
+    <td style="text-align: center;">JUL 03-05</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inscripción y asignación extemporánea</td>
+    <td style="text-align: center;">JUL 06-08</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Receso Intersemestre</td>
+    <td style="text-align: center;">JUL 03-07</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio de semestre todos los grados.</td>
+    <td style="text-align: center;">JUL 10</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio Módulo I</td>
+    <td style="text-align: center;">JUL 10-14</td>
+  </tr>
 
-              <h2>Estudiantes de Posgrados</h2>
-              <p>
-                En cualquier fecha del trimestre vigente, el estudiante puede cancelar matrícula tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite.
-              </p>
-              <h3>Proceso</h3>
-              <p>
-              Deberá de enviar un correo a tesoreria@umg.edu.gt dirigido al Departamento de Tesorería detallando: nombre completo y número de carnet, solicitando la cancelación de matrícula, este proceso no tiene ningún costo el único requisito que se solicita es que el estudiante se encuentre totalmente solvente en sus pagos, tomando en cuenta la fecha a partir de la cual está haciendo su solicitud.
-            </p>
-            <p>
-              <b>Más Información</b>
-              <br>
-              Departamento de Tesorería
-              <br>
-              Edificio “A”, 2do. Nivel, Oficina A-230
-              <br>
-              PBX: 2411-1800 Ext. 1206
-            </p>
-            <p>
-              <b>Horario de atención:</b>
-              <br>
-              Lunes a viernes de 7:00 a 20:30
-              <br>
-              Sábados de 7:00 a 12:00
-            </p>
+  </tbody><thead>
+    <tr>
+      <th>AGOSTO 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Día de festividad (FERIADO) (Cobán)</td>
+    <td style="text-align: center;">AGO 04</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Finaliza Módulo I</td>
+    <td style="text-align: center;">AGO 14-18</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Día de festividad (FERIADO) (capital)</td>
+    <td style="text-align: center;">AGO 15</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación Parcial 1 todos los grados</td>
+    <td style="text-align: center;">AGO 21-25</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio Módulo II</td>
+    <td style="text-align: center;">AGO 28 - SEP 01</td>
+  </tr>
+
+  </tbody><thead>
+    <tr>
+      <th>SEPTIEMBRE 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Asueto Día de Independencia</td>
+    <td style="text-align: center;">SEP 15</td>
+  </tr>
+</tbody><thead>
+    <tr>
+      <th>OCTUBRE 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Finaliza Módulo II</td>
+    <td style="text-align: center;">OCT 09-13</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación Parcial 2 todos los grados</td>
+    <td style="text-align: center;">OCT 09-13</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inicio Módulo III</td>
+    <td style="text-align: center;">OCT 16-20</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Asueto Día de la Revolución</td>
+    <td style="text-align: center;">OCT 20</td>
+  </tr>
+</tbody><thead>
+    <tr>
+      <th>Noviembre 2023</th>
+      <th>FECHA</th>
+    </tr>
+  </thead>
+  <tbody><tr>
+    <td style="text-align: left;">Asueto Día de Todos los Santos</td>
+    <td style="text-align: center;">NOV 01</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Congreso Latinoamericano de Endodoncia (3º. a 5º. Y clínica libre)</td>
+    <td style="text-align: center;">NOV 02 y 03</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Finaliza Módulo III</td>
+    <td style="text-align: center;">NOV 13-17</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluación final todos los grados</td>
+    <td style="text-align: center;">NOV 20-24</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Evaluaciones de recuperación todos los grados</td>
+    <td style="text-align: center;">NOV 27-30</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Inscripción y asignación ordinaria</td>
+    <td style="text-align: center;">NOV 27 - DIC 09</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;">Finaliza la clínica</td>
+    <td style="text-align: center;">NOV 30</td>
+  </tr>
+
+  </tbody>
+</table>
         </div>
       </article>
 
