--- a/calendario-traduccion-ingles-espanol.html
+++ b/calendario-traduccion-ingles-espanol.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Cancelación de matrícula</title>
+    <title>tpl: Single</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -788,49 +788,148 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                Cancelación de <b>matrícula</b>
-              </h1><br>
+                Calendario <b>Traducción Español-Inglés / Inglés-Español</b>
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Esta gestión la debe realizar el alumno que deje de estudiar en esta Escuela Superior para no incurrir en mora, de esta manera estará solvente de pagos y podrá inscribirse sin problemas financieros al momento de volver a la formación académica.
-              </p>
-              <p>Debe estar solvente de pagos al realizar la cancelación de matrícula y debe realizar este proceso en las siguientes fechas:</p>
+              <br>
+              <h2>Aplica para Campus Central y Centros Universitarios</h2>
+              <h3>Cursos Regulares 2,023</h3>
+              <h4> 1er. Bimestre</h4>
+              <ul>
+              <li class="asoc">
+                <p>Exámenes de Ubicación: <b>Enero 15 al 12 de Febrero</b></p>
+              </li>
+              <li class="asoc">
+                <p>Inscripción Ordinaria: <b>Enero 15 al 25 de Febrero</b></p>
+              </li>
+            </ul>
+              <table class="table" style="width: 100%;">
+              <thead>
+            <tr><th>Inicio de Clases</th>
+            <th>Inscripción Ordinaria</th>
+            <th>Exámenes Finales</th>
+              </tr>
+            </thead>
+            <tbody> 
+              <tr>
+                <td style="text-align: center;">
+                  Febrero 12 al 18<br>
+                </td>
+                <td style="text-align: center;">
+                  Febrero 26 al 04 de marzo
+                </td>
+                <td style="text-align: center;">
+                  Abril 16 al 22<br>
+                  (09 semanas)
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <h4> 2do. Bimestre</h4>
+              <ul>
+              <li class="asoc">
+                <p>Exámenes de Ubicación: <b>Abril 23 al 29 de mayo</b></p>
+              </li>
+              <li class="asoc">
+                <p>IInscripción Ordinaria: <b>Abril 23 al 13 de mayo</b></p>
+              </li>
+            </ul>
+            <table class="table" style="width: 100%;">
+      <thead>
+    <tr><th>Inicio de Clases</th>
+    <th>Inscripción Ordinaria</th>
+    <th>Exámenes Finales</th>
+      </tr>
+    </thead>
+    <tbody>  
+      <tr>
+        <td style="text-align: center;">
+          Abril 30<br>
+          Mayo 01 al 06<br>
+        </td>
+        <td style="text-align: center;">
+          Mayo 14 al 20
+        </td>
+        <td style="text-align: center;">
+          Junio 18 al 24<br>
+          (08 semanas)
+        </td>
+      </tr>
+    </tbody>
+</table>
+<p><b>ASUETOS</b></p>
+<ul>
+  <li>03 al 09 de abril Semana Santa</li>
+  <li>01 de mayo Día del Trabajo</li>
+  <li>30 de junio Día del Ejército</li>
+</ul>
+<h4>3er. Bimestre</h4>
+<ul>
+  <li>Exámenes de Ubicación: <b>Junio 25 al 08 de julio</b></li>
+  <li>Inscripción Ordinaria: <b>Junio 25 al 22 de julio</b></li>
+</ul>
+<table class="table" style="width: 100%;">
+      <thead>
+    <tr><th>Inicio de Clases</th>
+    <th>Inscripción Ordinaria</th>
+    <th>Exámenes Finales</th>
+      </tr>
+    </thead>
+    <tbody>  
+      <tr>
+        <td style="text-align: center;">
+          Julio 09 al 15<br>
+          Julio 23 al 29<br>
+        </td>
+        <td style="text-align: center;">
+          Mayo 14 al 20
+        </td>
+        <td style="text-align: center;">
+          Septiembre 03 al 09<br>
+          (09 semanas)
+        </td>
+      </tr>
+    </tbody>
+</table>
+<h4>4to. Bimestre Cursos Regulares 2,023</h4>
+<ul>
+<li>Exámenes de Ubicación: <b>Septiembre 10 al 16</b></li>
+<li>Inscripción Ordinaria: <b>Septiembre 10 al 30</b></li>
+</ul>
+<table class="table" style="width: 100%;">
+      <thead>
+    <tr><th>Inicio de Clases</th>
+    <th>Inscripción Ordinaria</th>
+    <th>Exámenes Finales</th>
+      </tr>
+    </thead>
+    <tbody>  
+      <tr>
+        <td style="text-align: center;">
+          Septiembre 17 al 23<br>
+        </td>
+        <td style="text-align: center;">
+          Octubre del 01 al 07
+        </td>
+        <td style="text-align: center;">
+          Noviembre 12 al 18<br>
+          (09 semanas)
+        </td>
+      </tr>
+    </tbody>
+</table>
+<p><b>ASUETOS</b></p>
+<ul>
+<li>15 de agosto Día de la Virgen de la Asunción</li>
+<li>15 de septiembre Día de la Independencia</li>
+<li>12 de octubre Día de la Raza</li>
+<li>20 de octubre Día de la Revolución</li>
+<li>01 de noviembre Día de los Santos</li>
+</ul>
 
-              <h2>Estudiantes de Pregrado (Licenciaturas)</h2>
-              <p>
-              En el primer semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de mayo, a partir del 01 de junio ya no puede realizar dicho trámite.
-            </p>
-              <p>
-                En el segundo semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de octubre, a partir del 01 de noviembre ya no puede realizar dicho trámite.
-              </p>
-
-              <h2>Estudiantes de Posgrados</h2>
-              <p>
-                En cualquier fecha del trimestre vigente, el estudiante puede cancelar matrícula tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite.
-              </p>
-              <h3>Proceso</h3>
-              <p>
-              Deberá de enviar un correo a tesoreria@umg.edu.gt dirigido al Departamento de Tesorería detallando: nombre completo y número de carnet, solicitando la cancelación de matrícula, este proceso no tiene ningún costo el único requisito que se solicita es que el estudiante se encuentre totalmente solvente en sus pagos, tomando en cuenta la fecha a partir de la cual está haciendo su solicitud.
-            </p>
-            <p>
-              <b>Más Información</b>
-              <br>
-              Departamento de Tesorería
-              <br>
-              Edificio “A”, 2do. Nivel, Oficina A-230
-              <br>
-              PBX: 2411-1800 Ext. 1206
-            </p>
-            <p>
-              <b>Horario de atención:</b>
-              <br>
-              Lunes a viernes de 7:00 a 20:30
-              <br>
-              Sábados de 7:00 a 12:00
-            </p>
         </div>
       </article>
 
