--- a/capellania.html
+++ b/capellania.html
@@ -9,7 +9,7 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Cancelación de matrícula</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Capellanía</title>
   </head>
   <body class="single">
     <header class="visible">
@@ -788,49 +788,110 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                Cancelación de <b>matrícula</b>
+               <b>Capellanía</b>
               </h1><br>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Esta gestión la debe realizar el alumno que deje de estudiar en esta Escuela Superior para no incurrir en mora, de esta manera estará solvente de pagos y podrá inscribirse sin problemas financieros al momento de volver a la formación académica.
-              </p>
-              <p>Debe estar solvente de pagos al realizar la cancelación de matrícula y debe realizar este proceso en las siguientes fechas:</p>
+            
+              <p>Nuestra Capellanía es un espacio en donde cuidamos tu vida y el desarrollo espiritual de los estudiantes y del personal académico y administrativo. Se proporciona apoyo y consejo confidencial en los momentos críticos con el fin de salir triunfantes con la ayuda de Dios por medio de Palabra.</p>
+              <ul>
+                  <li>
+                    Apoyo en: oración, consejos y guía en tu caminar integral.
+                  </li>
+                  <li>
+                    Palabras de aliento y exhortación para seguir adelante.
+                  </li>
+                  <li>
+                    Eventos diversos, campamentos, cine foro, seminarios, talleres, conciertos y cursos que te capaciten a enfrentar la vida y que promueven tu crecimiento con el fin de conocer la voluntad de
+                    Dios y el propósito con el cual fuiste diseñado.
+          </li>
+          <li>
+            Reuniones de aprendizaje, material escrito y conferencias que inviten a tu reflexión  y el crecimiento espiritual.
+          </li>
+          <li>
+            Asesoría en la realización de actividades Bíblico-Teológicas, juntamente con la Facultad de Teología.
+          </li>
+          <li>
+            Fórums para la actualización en temas de crecimiento profesional y de liderazgo.
+          </li>
+          <li>Reuniones de oración y estudios Bíblicos.
+          </li>
 
-              <h2>Estudiantes de Pregrado (Licenciaturas)</h2>
-              <p>
-              En el primer semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de mayo, a partir del 01 de junio ya no puede realizar dicho trámite.
-            </p>
-              <p>
-                En el segundo semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de octubre, a partir del 01 de noviembre ya no puede realizar dicho trámite.
-              </p>
+                    <li>
+                        Conversatorios para estudiantes
+                    </li>
+                    <li>
+                      Atención a egresados
+                    </li>
+                    <li>
+                      Atención de casos especiales.
+                    </li>
+                    <li>
+                      Devocionales y discipulado para el personal administrativo
+                    </li>
+                    <li>
+                      Conferencias especiales para estudiantes en las diferentes sedes
+                    </li>
+                    <li>
+                      Apoyo Pastoral, tales como visita a enfermos, acompañamiento en diferentes eventualidades para personal docente y administrativo, así como para estudiantes.
+          </li>
+          <li>
+            Publicación constante en redes sociales de material para tu crecimiento y aprendizaje
+          </li>
+          <li>
+            Enseñanza 100% Bíblica
+          </li>
+                </ul>
 
-              <h2>Estudiantes de Posgrados</h2>
-              <p>
-                En cualquier fecha del trimestre vigente, el estudiante puede cancelar matrícula tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite.
-              </p>
-              <h3>Proceso</h3>
-              <p>
-              Deberá de enviar un correo a tesoreria@umg.edu.gt dirigido al Departamento de Tesorería detallando: nombre completo y número de carnet, solicitando la cancelación de matrícula, este proceso no tiene ningún costo el único requisito que se solicita es que el estudiante se encuentre totalmente solvente en sus pagos, tomando en cuenta la fecha a partir de la cual está haciendo su solicitud.
-            </p>
-            <p>
-              <b>Más Información</b>
-              <br>
-              Departamento de Tesorería
-              <br>
-              Edificio “A”, 2do. Nivel, Oficina A-230
-              <br>
-              PBX: 2411-1800 Ext. 1206
-            </p>
-            <p>
-              <b>Horario de atención:</b>
-              <br>
-              Lunes a viernes de 7:00 a 20:30
-              <br>
-              Sábados de 7:00 a 12:00
-            </p>
+                <div class="row">
+            <div class="col">
+                <div class="pix">
+                    <img src="img/capellania/Capellan.Haroldo.Urizar.jpg">
+                    <label>
+                        Lic. Haroldo Urízar<br>
+                        Capellán
+                    </label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="bio">
+                    <ul>
+                        <li>
+                            Licenciado en Administración de Empresas, <br>
+                            Universidad Mariano Gálvez de Guatemala
+                        </li>
+                        <li>
+                            Graduado del Instituto Haggai, Singapur
+                        </li>
+                        <li>
+                            Maestría en Estudios Bíblicos<br>
+                            Universidad Mariano Gálvez de Guatemala
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col">
+                <ul>
+                    <li class="vcard">
+                        <label class="org">Campus Central</label><br>
+                        Edificio de "I", 5to. Nivel
+                        <a href="tel:24111800,1121" class="tel">
+                            PBX: 2411 1800 ext. 1406, 1107
+                        </a>
+                        <a href="mailto:capellan@umg.edu.gt" class="email">capellan@umg.edu.gt</a>
+                        <p>
+                            Lunes a viernes de 09:00 a 05:00 horas<br>
+                            Sábado de 09:00 a 12:00 horas
+                        </p>
+                        <div class="share">
+                            <a target="_blank" href="https://www.facebook.com/capellaniaumg/" class="fB"></a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
         </div>
       </article>
 
