--- a/info.html
+++ b/info.html
@@ -12,8 +12,7 @@
     <link href="css/_tpl/info.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    
-
+  
     <title>Universidad Mariano Gálvez de Guatemala: Centro de Información</title>
   </head>
   <body class="info">
@@ -724,9 +723,9 @@
               </div>
             
           <ul class="lista-enlaces">
-              <li><a href="#">Cancelación de matrícula</a></li>
-              <li><a href="#">Complementos de pagos</a></li>
-              <li><a href="#">Estados de Cuentas</a></li>
+              <li><a href="cancelacion-matricula.html">Cancelación de matrícula</a></li>
+              <li><a href="complemento-pago-colegiatura.html">Complementos de pagos</a></li>
+             <!-- <li><a href="">Estados de Cuentas</a></li> -->
               <li><a href="pagar-universidad.html">Pagar la Universidad</a></li>
               <li><a href="pago-de-multas.html">Pago de multas</a></li>
               <li><a href="pago-de-recuperacion-de-curso.html">Pago de recuperación de curso</a></li>
