--- a/pago-de-multas.html
+++ b/pago-de-multas.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Pago de Multas</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -789,7 +789,7 @@
             <div class="col-12">
               <h1 class="display-1 lh-1">
                 Pago de <b>multas</b>
-              </h1>
+              </h1><br>
             </div>
           </div>
           <div class="row">
@@ -797,7 +797,7 @@
               <h2 class="display-4 lh-1">Estudiantes de Pregrado (Licenciaturas)</h2>
               <p class="mt-3">
                 Las multas se generan por someterse a evaluaciones parciales extraordinarias, finales, recuperaciones, así como en el caso de los cursos prácticos asignados y al finalizarlos no estar solventes; además las multas se generan de cualquier saldo pendiente, esto incluye pagos de complementos de colegiaturas, moras o multas generados por insolvencia de evaluaciones parciales anteriores que no se hubiera pagado en su momento, se deben de cancelar Q.25.00 por cada una.
-              </p>
+              </p><br>
               <h2 class="display-4 lh-1">Estudiantes de Posgrado (Maestrías)</h2>
               <p class="mt-3">
                 Las multas se generan por finalizar los cursos del trimestre, sin estar solventes de cualquier saldo pendiente; también aplica el mismo procedimiento, tal como en Pregrado (Licenciaturas) se deben cancelar Q.25.00 por cada curso.
@@ -806,15 +806,21 @@
                 Puedes consultar tu estado de cuenta con el departamento de Tesorería por medio del siguiente correo electrónico: <b>tesoreria@umg.edu.gt</b>
               </p>
               <hr>
-              <p>Para realizar el pago, debes generar el documento de pago, ingresa a MiUMG con tus datos proporcionados por la Universidad.</p>
-              <p>Cuando ingreses, debes buscar el módulo de "Efectuar pagos y generar formularios" y dentro del módulo identifica y pulsa la opción de “Boleta de pago de multas”, completa el formulario y sigue las indicaciones.</p>
-              <p>Después de seleccionar los meses deseados, debes presionar sobre el botón “Generar boleta”.</p>
-              <p>Se generará un documento en formato PDF el cuál puedes imprimir inmediatamente o guardar en tu equipo para poder presentarlo en agencias bancarias, o bien, para realizar el pago en línea en cualquiera de los tres bancos del sistema que utiliza UMG.</p>
+
+             <br> <h2 class="display-4 lh-1">Realizar el pago</h2><br>
+<ul>
+              <li><p>Para realizar el pago, debes generar el documento de pago, ingresa a <a href="https://apps.umg.edu.gt" target="_blank">MiUMG</a> con tus datos proporcionados por la Universidad.</p></li>
+              <li><p>Cuando ingreses, debes buscar el módulo de "Efectuar pagos y generar formularios" y dentro del módulo identifica y pulsa la opción de “Boleta de pago de multas”, completa el formulario y sigue las indicaciones.</p></li>
+                <li><p>Después de seleccionar los meses deseados, debes presionar sobre el botón “Generar boleta”.</p></li>
+                  <li> <p>Se generará un documento en formato PDF el cuál puedes imprimir inmediatamente o guardar en tu equipo para poder presentarlo en agencias bancarias, o bien, para realizar el pago en línea en cualquiera de los tres bancos del sistema que utiliza UMG.</p>
               <ul class="list-unstyled ps-4 ff-Lato-bli fs-4 text-primary">
                 <li>Banco Industrial</li>
                 <li>BAM</li>
                 <li>G&T</li>
-              </ul>
+              </ul></li>
+</ul>
+
+
               <p>Además, puedes realizar el pago por medio de tarjeta de crédito o débito eligiendo el tipo de pago 476 bajo la descripción <b>“Abono a multa”</b> por la cantidad de multas a pagar.</p>
         </div>
       </article>
